--- a/src/main/webapp/Paginas/producto/Create.xhtml
+++ b/src/main/webapp/Paginas/producto/Create.xhtml
@@ -8,29 +8,29 @@
 
     <ui:composition>
 
-        <p:dialog id="ProductoCreateDlg" widgetVar="ProductoCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateProductoTitle}">
+        <p:dialog id="ProductoCreateDlg" widgetVar="ProductoCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registro de producto">
             <h:form id="ProductoCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{productoController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateProductoLabel_productoid}" for="productoid" />
-                        <p:inputText id="productoid" value="#{productoController.selected.productoid}" title="#{bundle.CreateProductoTitle_productoid}" required="true" requiredMessage="#{bundle.CreateProductoRequiredMessage_productoid}"/>
                         <p:outputLabel value="#{bundle.CreateProductoLabel_nombre}" for="nombre" />
                         <p:inputText id="nombre" value="#{productoController.selected.nombre}" title="#{bundle.CreateProductoTitle_nombre}" required="true" requiredMessage="#{bundle.CreateProductoRequiredMessage_nombre}"/>
                         <p:outputLabel value="#{bundle.CreateProductoLabel_descripcion}" for="descripcion" />
                         <p:inputText id="descripcion" value="#{productoController.selected.descripcion}" title="#{bundle.CreateProductoTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateProductoRequiredMessage_descripcion}"/>
-                        <p:outputLabel value="#{bundle.CreateProductoLabel_unidadMedida}" for="unidadMedida" />
+                        <p:outputLabel value="Unidad de medida: " for="unidadMedida" />
                         <p:inputText id="unidadMedida" value="#{productoController.selected.unidadMedida}" title="#{bundle.CreateProductoTitle_unidadMedida}" required="true" requiredMessage="#{bundle.CreateProductoRequiredMessage_unidadMedida}"/>
-                        <p:outputLabel value="#{bundle.CreateProductoLabel_precioUnitario}" for="precioUnitario" />
+                        <p:outputLabel value="Precio unitario: " for="precioUnitario" />
                         <p:inputText id="precioUnitario" value="#{productoController.selected.precioUnitario}" title="#{bundle.CreateProductoTitle_precioUnitario}" required="true" requiredMessage="#{bundle.CreateProductoRequiredMessage_precioUnitario}"/>
-                        <p:outputLabel value="#{bundle.CreateProductoLabel_categoriaid}" for="categoriaid" />
+                        <p:outputLabel value="Id de categoria: " for="categoriaid" />
                         <p:selectOneMenu id="categoriaid" value="#{productoController.selected.categoriaid}" required="true" requiredMessage="#{bundle.EditProductoRequiredMessage_categoriaid}">
                             <f:selectItems value="#{categoriaController.itemsAvailableSelectOne}"
                                            var="categoriaidItem"
                                            itemValue="#{categoriaidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{productoController.create}" value="#{bundle.Save}" update="display,:ProductoListForm:datalist,:growl" oncomplete="handleSubmit(args,'ProductoCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="ProductoCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{productoController.create}" value="Guardar" update="display,:ProductoListForm:datalist,:growl" oncomplete="handleSubmit(args,'ProductoCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="ProductoCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
