--- a/src/main/webapp/Paginas/rol/View.xhtml
+++ b/src/main/webapp/Paginas/rol/View.xhtml
@@ -8,18 +8,18 @@
 
     <ui:composition>
 
-        <p:dialog id="RolViewDlg" widgetVar="RolViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewRolTitle}">
+        <p:dialog id="RolViewDlg" widgetVar="RolViewDialog" modal="true" resizable="false" appendTo="@(body)" header="Información">
             <h:form id="RolViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{rolController.selected != null}">
                         <h:outputText value="#{bundle.ViewRolLabel_email}"/>
                         <h:outputText value="#{rolController.selected.email}" title="#{bundle.ViewRolTitle_email}"/>
-                        <h:outputText value="#{bundle.ViewRolLabel_nombre}"/>
+                        <h:outputText value="Rol: "/>
                         <h:outputText value="#{rolController.selected.nombre}" title="#{bundle.ViewRolTitle_nombre}"/>
-                        <h:outputText value="#{bundle.ViewRolLabel_usuario}"/>
-                        <h:outputText value="#{rolController.selected.usuario}" title="#{bundle.ViewRolTitle_usuario}"/>
                     </p:panelGrid>
-                    <p:commandButton value="#{bundle.Close}" onclick="RolViewDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-info" value="Aceptar" onclick="RolViewDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
