--- a/src/main/webapp/Paginas/tarjetacreditocompra/Create.xhtml
+++ b/src/main/webapp/Paginas/tarjetacreditocompra/Create.xhtml
@@ -8,25 +8,25 @@
 
     <ui:composition>
 
-        <p:dialog id="TarjetacreditocompraCreateDlg" widgetVar="TarjetacreditocompraCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateTarjetacreditocompraTitle}">
+        <p:dialog id="TarjetacreditocompraCreateDlg" widgetVar="TarjetacreditocompraCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registrar tarjeta de compra">
             <h:form id="TarjetacreditocompraCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{tarjetacreditocompraController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateTarjetacreditocompraLabel_tarjetacreditocompraid}" for="tarjetacreditocompraid" />
-                        <p:inputText id="tarjetacreditocompraid" value="#{tarjetacreditocompraController.selected.tarjetacreditocompraid}" title="#{bundle.CreateTarjetacreditocompraTitle_tarjetacreditocompraid}" required="true" requiredMessage="#{bundle.CreateTarjetacreditocompraRequiredMessage_tarjetacreditocompraid}"/>
                         <p:outputLabel value="#{bundle.CreateTarjetacreditocompraLabel_numero}" for="numero" />
                         <p:inputText id="numero" value="#{tarjetacreditocompraController.selected.numero}" title="#{bundle.CreateTarjetacreditocompraTitle_numero}" required="true" requiredMessage="#{bundle.CreateTarjetacreditocompraRequiredMessage_numero}"/>
                         <p:outputLabel value="#{bundle.CreateTarjetacreditocompraLabel_cvc}" for="cvc" />
                         <p:inputText id="cvc" value="#{tarjetacreditocompraController.selected.cvc}" title="#{bundle.CreateTarjetacreditocompraTitle_cvc}" required="true" requiredMessage="#{bundle.CreateTarjetacreditocompraRequiredMessage_cvc}"/>
-                        <p:outputLabel value="#{bundle.CreateTarjetacreditocompraLabel_nombreTitular}" for="nombreTitular" />
+                        <p:outputLabel value="Nombre del titular:" for="nombreTitular" />
                         <p:inputText id="nombreTitular" value="#{tarjetacreditocompraController.selected.nombreTitular}" title="#{bundle.CreateTarjetacreditocompraTitle_nombreTitular}" required="true" requiredMessage="#{bundle.CreateTarjetacreditocompraRequiredMessage_nombreTitular}"/>
-                        <p:outputLabel value="#{bundle.CreateTarjetacreditocompraLabel_fechaExpiracion}" for="fechaExpiracion" />
+                        <p:outputLabel value="Fecha de expiración:" for="fechaExpiracion" />
                         <p:inputText id="fechaExpiracion" value="#{tarjetacreditocompraController.selected.fechaExpiracion}" title="#{bundle.CreateTarjetacreditocompraTitle_fechaExpiracion}" required="true" requiredMessage="#{bundle.CreateTarjetacreditocompraRequiredMessage_fechaExpiracion}"/>
-                        <p:outputLabel value="#{bundle.CreateTarjetacreditocompraLabel_lugarFacturacion}" for="lugarFacturacion" />
+                        <p:outputLabel value="Lugar de facturación:" for="lugarFacturacion" />
                         <p:inputText id="lugarFacturacion" value="#{tarjetacreditocompraController.selected.lugarFacturacion}" title="#{bundle.CreateTarjetacreditocompraTitle_lugarFacturacion}" required="true" requiredMessage="#{bundle.CreateTarjetacreditocompraRequiredMessage_lugarFacturacion}"/>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{tarjetacreditocompraController.create}" value="#{bundle.Save}" update="display,:TarjetacreditocompraListForm:datalist,:growl" oncomplete="handleSubmit(args,'TarjetacreditocompraCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="TarjetacreditocompraCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{tarjetacreditocompraController.create}" value="Guardar" update="display,:TarjetacreditocompraListForm:datalist,:growl" oncomplete="handleSubmit(args,'TarjetacreditocompraCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="TarjetacreditocompraCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
