--- a/src/main/webapp/Paginas/tarjetacreditocompra/List.xhtml
+++ b/src/main/webapp/Paginas/tarjetacreditocompra/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListTarjetacreditocompraTitle}"></h:outputText>
+            <h:outputText value="Tarjetas Compra"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="TarjetacreditocompraListForm">
-                <p:panel header="#{bundle.ListTarjetacreditocompraTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Tarjetas de Compra</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{tarjetacreditocompraController.items}" var="item"
                                  selectionMode="single" selection="#{tarjetacreditocompraController.selected}"
                                  paginator="true"
@@ -23,53 +32,38 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                    <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditocompraTitle_tarjetacreditocompraid}"/>
+                                <h:outputText value="Id Tarjeta de Compra"/>
                             </f:facet>
                             <h:outputText value="#{item.tarjetacreditocompraid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditocompraTitle_numero}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.numero}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditocompraTitle_cvc}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.cvc}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditocompraTitle_nombreTitular}"/>
+                                <h:outputText value="Titular"/>
                             </f:facet>
                             <h:outputText value="#{item.nombreTitular}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditocompraTitle_fechaExpiracion}"/>
+                                <h:outputText value="Fecha de Expiración"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaExpiracion}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditocompraTitle_lugarFacturacion}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.lugarFacturacion}"/>
-                        </p:column>
+
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{tarjetacreditocompraController.prepareCreate}" update=":TarjetacreditocompraCreateForm" oncomplete="PF('TarjetacreditocompraCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":TarjetacreditocompraViewForm" oncomplete="PF('TarjetacreditocompraViewDialog').show()" disabled="#{empty tarjetacreditocompraController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":TarjetacreditocompraEditForm" oncomplete="PF('TarjetacreditocompraEditDialog').show()" disabled="#{empty tarjetacreditocompraController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{tarjetacreditocompraController.destroy}" update=":growl,datalist" disabled="#{empty tarjetacreditocompraController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{tarjetacreditocompraController.prepareCreate}" update=":TarjetacreditocompraCreateForm" oncomplete="PF('TarjetacreditocompraCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":TarjetacreditocompraViewForm" oncomplete="PF('TarjetacreditocompraViewDialog').show()" disabled="#{empty tarjetacreditocompraController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":TarjetacreditocompraEditForm" oncomplete="PF('TarjetacreditocompraEditDialog').show()" disabled="#{empty tarjetacreditocompraController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" id="deleteButton" icon="ui-icon-trash" onclick="return ConfirmDelete()"  value="Eliminar" actionListener="#{tarjetacreditocompraController.destroy}" update=":growl,datalist" disabled="#{empty tarjetacreditocompraController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
