--- a/src/main/webapp/Paginas/tarjetacreditoventa/Edit.xhtml
+++ b/src/main/webapp/Paginas/tarjetacreditoventa/Edit.xhtml
@@ -8,25 +8,25 @@
 
     <ui:composition>
 
-        <p:dialog id="TarjetacreditoventaEditDlg" widgetVar="TarjetacreditoventaEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditTarjetacreditoventaTitle}">
+        <p:dialog id="TarjetacreditoventaEditDlg" widgetVar="TarjetacreditoventaEditDialog" modal="true" resizable="false" appendTo="@(body)" header="Editar Tarjeta">
             <h:form id="TarjetacreditoventaEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{tarjetacreditoventaController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditTarjetacreditoventaLabel_tarjetacreditoventaid}" for="tarjetacreditoventaid" />
-                        <p:inputText id="tarjetacreditoventaid" value="#{tarjetacreditoventaController.selected.tarjetacreditoventaid}" title="#{bundle.EditTarjetacreditoventaTitle_tarjetacreditoventaid}" required="true" requiredMessage="#{bundle.EditTarjetacreditoventaRequiredMessage_tarjetacreditoventaid}"/>
                         <p:outputLabel value="#{bundle.EditTarjetacreditoventaLabel_numero}" for="numero" />
                         <p:inputText id="numero" value="#{tarjetacreditoventaController.selected.numero}" title="#{bundle.EditTarjetacreditoventaTitle_numero}" required="true" requiredMessage="#{bundle.EditTarjetacreditoventaRequiredMessage_numero}"/>
                         <p:outputLabel value="#{bundle.EditTarjetacreditoventaLabel_cvc}" for="cvc" />
                         <p:inputText id="cvc" value="#{tarjetacreditoventaController.selected.cvc}" title="#{bundle.EditTarjetacreditoventaTitle_cvc}" required="true" requiredMessage="#{bundle.EditTarjetacreditoventaRequiredMessage_cvc}"/>
-                        <p:outputLabel value="#{bundle.EditTarjetacreditoventaLabel_nombreTitular}" for="nombreTitular" />
+                        <p:outputLabel value="Nombre del titular" for="nombreTitular" />
                         <p:inputText id="nombreTitular" value="#{tarjetacreditoventaController.selected.nombreTitular}" title="#{bundle.EditTarjetacreditoventaTitle_nombreTitular}" required="true" requiredMessage="#{bundle.EditTarjetacreditoventaRequiredMessage_nombreTitular}"/>
-                        <p:outputLabel value="#{bundle.EditTarjetacreditoventaLabel_fechaExpiracion}" for="fechaExpiracion" />
+                        <p:outputLabel value="Fecha de expiración" for="fechaExpiracion" />
                         <p:inputText id="fechaExpiracion" value="#{tarjetacreditoventaController.selected.fechaExpiracion}" title="#{bundle.EditTarjetacreditoventaTitle_fechaExpiracion}" required="true" requiredMessage="#{bundle.EditTarjetacreditoventaRequiredMessage_fechaExpiracion}"/>
-                        <p:outputLabel value="#{bundle.EditTarjetacreditoventaLabel_lugarFacturacion}" for="lugarFacturacion" />
+                        <p:outputLabel value="Lugar de facturación" for="lugarFacturacion" />
                         <p:inputText id="lugarFacturacion" value="#{tarjetacreditoventaController.selected.lugarFacturacion}" title="#{bundle.EditTarjetacreditoventaTitle_lugarFacturacion}" required="true" requiredMessage="#{bundle.EditTarjetacreditoventaRequiredMessage_lugarFacturacion}"/>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{tarjetacreditoventaController.update}" value="#{bundle.Save}" update="display,:TarjetacreditoventaListForm:datalist,:growl" oncomplete="handleSubmit(args, 'TarjetacreditoventaEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="TarjetacreditoventaEditDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-success" actionListener="#{tarjetacreditoventaController.update}" value="Guardar" update="display,:TarjetacreditoventaListForm:datalist,:growl" oncomplete="handleSubmit(args, 'TarjetacreditoventaEditDialog');"/>
+                    <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="TarjetacreditoventaEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
