--- a/src/main/webapp/Paginas/tarjetacreditoventa/List.xhtml
+++ b/src/main/webapp/Paginas/tarjetacreditoventa/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListTarjetacreditoventaTitle}"></h:outputText>
+            <h:outputText value="Tarjetas Ventas"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="TarjetacreditoventaListForm">
-                <p:panel header="#{bundle.ListTarjetacreditoventaTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Tarjetas de Venta</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{tarjetacreditoventaController.items}" var="item"
                                  selectionMode="single" selection="#{tarjetacreditoventaController.selected}"
                                  paginator="true"
@@ -23,53 +32,37 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                    <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditoventaTitle_tarjetacreditoventaid}"/>
+                                <h:outputText value="Id Tarjeta de Venta"/>
                             </f:facet>
                             <h:outputText value="#{item.tarjetacreditoventaid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditoventaTitle_numero}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.numero}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditoventaTitle_cvc}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.cvc}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditoventaTitle_nombreTitular}"/>
+                                <h:outputText value="Titular"/>
                             </f:facet>
                             <h:outputText value="#{item.nombreTitular}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditoventaTitle_fechaExpiracion}"/>
+                                <h:outputText value="Lugar de facturación"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaExpiracion}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListTarjetacreditoventaTitle_lugarFacturacion}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.lugarFacturacion}"/>
-                        </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{tarjetacreditoventaController.prepareCreate}" update=":TarjetacreditoventaCreateForm" oncomplete="PF('TarjetacreditoventaCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":TarjetacreditoventaViewForm" oncomplete="PF('TarjetacreditoventaViewDialog').show()" disabled="#{empty tarjetacreditoventaController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":TarjetacreditoventaEditForm" oncomplete="PF('TarjetacreditoventaEditDialog').show()" disabled="#{empty tarjetacreditoventaController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{tarjetacreditoventaController.destroy}" update=":growl,datalist" disabled="#{empty tarjetacreditoventaController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{tarjetacreditoventaController.prepareCreate}" update=":TarjetacreditoventaCreateForm" oncomplete="PF('TarjetacreditoventaCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":TarjetacreditoventaViewForm" oncomplete="PF('TarjetacreditoventaViewDialog').show()" disabled="#{empty tarjetacreditoventaController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":TarjetacreditoventaEditForm" oncomplete="PF('TarjetacreditoventaEditDialog').show()" disabled="#{empty tarjetacreditoventaController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" id="deleteButton" icon="ui-icon-trash" onclick="return ConfirmDelete()"  value="Eliminar" actionListener="#{tarjetacreditoventaController.destroy}" update=":growl,datalist" disabled="#{empty tarjetacreditoventaController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
