--- a/src/main/webapp/Paginas/usuario/View.xhtml
+++ b/src/main/webapp/Paginas/usuario/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition>
 
-        <p:dialog id="UsuarioViewDlg" widgetVar="UsuarioViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewUsuarioTitle}">
+        <p:dialog id="UsuarioViewDlg" widgetVar="UsuarioViewDialog" modal="true" resizable="false" appendTo="@(body)" header="Información">
             <h:form id="UsuarioViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{usuarioController.selected != null}">
@@ -18,14 +18,14 @@
                         <h:outputText value="#{usuarioController.selected.contrasenia}" title="#{bundle.ViewUsuarioTitle_contrasenia}"/>
                         <h:outputText value="#{bundle.ViewUsuarioLabel_activo}"/>
                         <p:selectBooleanCheckbox value="#{usuarioController.selected.activo}" disabled="true"/>
-                        <h:outputText value="#{bundle.ViewUsuarioLabel_fechaCreacion}"/>
+                        <h:outputText value="Fecha de creación: "/>
                         <h:outputText value="#{usuarioController.selected.fechaCreacion}" title="#{bundle.ViewUsuarioTitle_fechaCreacion}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
                         </h:outputText>
-                        <h:outputText value="#{bundle.ViewUsuarioLabel_rol}"/>
-                        <h:outputText value="#{usuarioController.selected.rol}" title="#{bundle.ViewUsuarioTitle_rol}"/>
                     </p:panelGrid>
-                    <p:commandButton value="#{bundle.Close}" onclick="UsuarioViewDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-info" value="Aceptar" onclick="UsuarioViewDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
