--- a/src/main/webapp/Paginas/usuariosw/List.xhtml
+++ b/src/main/webapp/Paginas/usuariosw/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListUsuarioswTitle}"></h:outputText>
+            <h:outputText value="Usuarios WS"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="UsuarioswListForm">
-                <p:panel header="#{bundle.ListUsuarioswTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Usuarios WS</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{usuarioswController.items}" var="item"
                                  selectionMode="single" selection="#{usuarioswController.selected}"
                                  paginator="true"
@@ -23,13 +32,14 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                    <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListUsuarioswTitle_usuarioid}"/>
+                                <h:outputText value="Id Usuario"/>
                             </f:facet>
                             <h:outputText value="#{item.usuarioid}"/>
                         </p:column>
@@ -41,35 +51,25 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListUsuarioswTitle_contrasenia}"/>
+                                <h:outputText value="Contraseña"/>
                             </f:facet>
                             <h:outputText value="#{item.contrasenia}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListUsuarioswTitle_activo}"/>
+                                <h:outputText value="Status: "/>
                             </f:facet>
                             <p:selectBooleanCheckbox value="#{item.activo}" disabled="true"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListUsuarioswTitle_empresa}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.empresa}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListUsuarioswTitle_rfc}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.rfc}"/>
-                        </p:column>
+
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{usuarioswController.prepareCreate}" update=":UsuarioswCreateForm" oncomplete="PF('UsuarioswCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":UsuarioswViewForm" oncomplete="PF('UsuarioswViewDialog').show()" disabled="#{empty usuarioswController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":UsuarioswEditForm" oncomplete="PF('UsuarioswEditDialog').show()" disabled="#{empty usuarioswController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{usuarioswController.destroy}" update=":growl,datalist" disabled="#{empty usuarioswController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{usuarioswController.prepareCreate}" update=":UsuarioswCreateForm" oncomplete="PF('UsuarioswCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":UsuarioswViewForm" oncomplete="PF('UsuarioswViewDialog').show()" disabled="#{empty usuarioswController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":UsuarioswEditForm" oncomplete="PF('UsuarioswEditDialog').show()" disabled="#{empty usuarioswController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" onclick="return ConfirmDelete()" id="deleteButton" icon="ui-icon-trash"  value="Eliminar" actionListener="#{usuarioswController.destroy}" update=":growl,datalist" disabled="#{empty usuarioswController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
