--- a/src/main/webapp/Paginas/ventadetalle/Create.xhtml
+++ b/src/main/webapp/Paginas/ventadetalle/Create.xhtml
@@ -8,17 +8,17 @@
 
     <ui:composition>
 
-        <p:dialog id="VentadetalleCreateDlg" widgetVar="VentadetalleCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateVentadetalleTitle}">
+        <p:dialog id="VentadetalleCreateDlg" widgetVar="VentadetalleCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registro detalle de venta">
             <h:form id="VentadetalleCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{ventadetalleController.selected != null}">
                         <p:outputLabel value="#{bundle.CreateVentadetalleLabel_cantidad}" for="cantidad" />
                         <p:inputText id="cantidad" value="#{ventadetalleController.selected.cantidad}" title="#{bundle.CreateVentadetalleTitle_cantidad}" required="true" requiredMessage="#{bundle.CreateVentadetalleRequiredMessage_cantidad}"/>
-                        <p:outputLabel value="#{bundle.CreateVentadetalleLabel_precioUnitario}" for="precioUnitario" />
+                        <p:outputLabel value="Precio unitario:" for="precioUnitario" />
                         <p:inputText id="precioUnitario" value="#{ventadetalleController.selected.precioUnitario}" title="#{bundle.CreateVentadetalleTitle_precioUnitario}" required="true" requiredMessage="#{bundle.CreateVentadetalleRequiredMessage_precioUnitario}"/>
                         <p:outputLabel value="#{bundle.CreateVentadetalleLabel_importe}" for="importe" />
                         <p:inputText id="importe" value="#{ventadetalleController.selected.importe}" title="#{bundle.CreateVentadetalleTitle_importe}" required="true" requiredMessage="#{bundle.CreateVentadetalleRequiredMessage_importe}"/>
-                        <p:outputLabel value="#{bundle.CreateVentadetalleLabel_ordenventa}" for="ordenventa" />
+                        <p:outputLabel value="Orden de venta" for="ordenventa" />
                         <p:selectOneMenu id="ordenventa" value="#{ventadetalleController.selected.ordenventa}" required="true" requiredMessage="#{bundle.EditVentadetalleRequiredMessage_ordenventa}">
                             <f:selectItems value="#{ordenventaController.itemsAvailableSelectOne}"
                                            var="ordenventaItem"
@@ -31,8 +31,10 @@
                                            itemValue="#{productoItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{ventadetalleController.create}" value="#{bundle.Save}" update="display,:VentadetalleListForm:datalist,:growl" oncomplete="handleSubmit(args,'VentadetalleCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="VentadetalleCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{ventadetalleController.create}" value="Guardar" update="display,:VentadetalleListForm:datalist,:growl" oncomplete="handleSubmit(args,'VentadetalleCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="VentadetalleCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
