--- a/src/main/webapp/Paginas/ventadetalle/Edit.xhtml
+++ b/src/main/webapp/Paginas/ventadetalle/Edit.xhtml
@@ -8,17 +8,17 @@
 
     <ui:composition>
 
-        <p:dialog id="VentadetalleEditDlg" widgetVar="VentadetalleEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditVentadetalleTitle}">
+        <p:dialog id="VentadetalleEditDlg" widgetVar="VentadetalleEditDialog" modal="true" resizable="false" appendTo="@(body)" header="Editar detalle de venta">
             <h:form id="VentadetalleEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{ventadetalleController.selected != null}">
                         <p:outputLabel value="#{bundle.EditVentadetalleLabel_cantidad}" for="cantidad" />
                         <p:inputText id="cantidad" value="#{ventadetalleController.selected.cantidad}" title="#{bundle.EditVentadetalleTitle_cantidad}" required="true" requiredMessage="#{bundle.EditVentadetalleRequiredMessage_cantidad}"/>
-                        <p:outputLabel value="#{bundle.EditVentadetalleLabel_precioUnitario}" for="precioUnitario" />
+                        <p:outputLabel value="Precio Unitario" for="precioUnitario" />
                         <p:inputText id="precioUnitario" value="#{ventadetalleController.selected.precioUnitario}" title="#{bundle.EditVentadetalleTitle_precioUnitario}" required="true" requiredMessage="#{bundle.EditVentadetalleRequiredMessage_precioUnitario}"/>
                         <p:outputLabel value="#{bundle.EditVentadetalleLabel_importe}" for="importe" />
                         <p:inputText id="importe" value="#{ventadetalleController.selected.importe}" title="#{bundle.EditVentadetalleTitle_importe}" required="true" requiredMessage="#{bundle.EditVentadetalleRequiredMessage_importe}"/>
-                        <p:outputLabel value="#{bundle.EditVentadetalleLabel_ordenventa}" for="ordenventa" />
+                        <p:outputLabel value="Orden de venta" for="ordenventa" />
                         <p:selectOneMenu id="ordenventa" value="#{ventadetalleController.selected.ordenventa}" required="true" requiredMessage="#{bundle.EditVentadetalleRequiredMessage_ordenventa}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{ordenventaController.itemsAvailableSelectOne}"
@@ -33,8 +33,10 @@
                                            itemValue="#{productoItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{ventadetalleController.update}" value="#{bundle.Save}" update="display,:VentadetalleListForm:datalist,:growl" oncomplete="handleSubmit(args, 'VentadetalleEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="VentadetalleEditDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-success" actionListener="#{ventadetalleController.update}" value="Guardar" update="display,:VentadetalleListForm:datalist,:growl" oncomplete="handleSubmit(args, 'VentadetalleEditDialog');"/>
+                    <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="VentadetalleEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
