--- a/src/main/webapp/secured/user/index.xhtml
+++ b/src/main/webapp/secured/user/index.xhtml
@@ -20,9 +20,9 @@
         <br />
         <h:link outcome="/Paginas/compradetalle/List" value="Show All Compradetalle Items"/>
         <br />
-        <h:link outcome="/Paginas/empleado/List" value="Show All Empleado Items" rendered="#{login.rolUsers}"/>
+        <h:link outcome="/Paginas/empleado/List" value="Show All Empleado Items" />
         <br />
-        <h:link outcome="/Paginas/facturacompra/List" value="Show All Facturacompra Items" rendered="#{login.rolAdmin}"/>
+        <h:link outcome="/Paginas/facturacompra/List" value="Show All Facturacompra Items" />
         <br />
         <h:link outcome="/Paginas/facturaventa/List" value="Show All Facturaventa Items"/>
         <br />
